--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "react": "^16.8.6",
     "react-native-svg": "^7.2.0"
+  },
+  "peerDependencies": {
+    "react": "^16.8.6",
+    "react-native": "^0.60.0"
   }
 }
