--- a/package.json
+++ b/package.json
@@ -7,6 +7,6 @@
   "dependencies": {
     "react": "^16.0.0",
     "react-native": "^0.49.3",
-    "react-native-svg": "^5.4.2"
+    "react-native-svg": "13.8.0"
   }
 }
