--- a/package.json
+++ b/package.json
@@ -1,13 +1,11 @@
 {
   "name": "@emurgo/react-native-blockies-svg",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Ethereum blockies for React Native as SVGs",
   "main": "index.js",
   "license": "MIT",
-  "dependencies": {
-    "react-native-svg": "13.8.0"
-  },
   "peerDependencies": {
+    "react-native-svg": "14.1.0",
     "react": "^16.8.6",
     "react-native": "^0.60.0"
   }
