--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@emurgo/react-native-blockies-svg",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "Ethereum blockies for React Native as SVGs",
   "main": "index.js",
   "license": "MIT",
   "peerDependencies": {
-    "react-native-svg": "14.1.0",
+    "react-native-svg": "<15.0.0",
     "react": "^16.8.6",
     "react-native": "^0.60.0"
   }
